Solved Design Breaks on medium Screen

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 }
 .portfolio-main {
   max-width: 1900px;
+  width: 100%;
   z-index: 5;
 }
 
